[package]
name = "necoboard"
version = "2.0.0"
edition = "2021"

[profile.dev]
panic = "abort"
debug = 1

[profile.release]
panic = "abort"
lto = true
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd = { git = "https://github.com/necocen/rustkbd" }
rp-pico = "0.6.0"
rp2040-hal = "0.7.0"
cortex-m = "0.7.6"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7.2"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
usb-device = "0.2.9"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
rp2040-hal-macros = "0.1.0"
fugit = "0.3.6"
