[package]
name = "necoboard"
version = "2.0.0"
edition = "2021"

[profile.dev]
panic = "abort"
debug = 2

[profile.release]
panic = "abort"
lto = true
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustkbd = { git = "https://github.com/necocen/rustkbd", rev = "6cfb2e9d" }
rp2040-hal = { version = "0.10.2", features = ["rt", "critical-section-impl"] }
cortex-m = "0.7.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
usb-device = "0.3.2"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
rp2040-hal-macros = "0.1.0"
fugit = "0.3.7"
rp2040-boot2 = "0.3.0"
critical-section = "1.1.2"
